--- a/app/assets/stylesheets/_mixins.css.scss
+++ b/app/assets/stylesheets/_mixins.css.scss
@@ -291,9 +291,8 @@
 
 		// Box properties
 		float: left;
-		width: $grid * 7;
-		margin-right: $grid;
-		padding: $grid / 2 0;
+		width: $grid * 8;
+		padding: $grid / 2;
 
 		// Background & borders
 		border: 1px solid rgba(0,0,0,0);
